# KnowlegeGraph

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  setup.py
.claude/skills/kg-mcp/: SKILL.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  types.ts
frontend/src/components/: DetailsPanel.tsx  GraphCanvas.test.tsx  GraphCanvas.tsx  LinkModal.tsx  NodePanel.tsx  SearchBar.tsx  SelectedNodeCard.tsx  StatusBar.tsx
frontend/src/lib/: graph-navigation.ts  mcp.ts
frontend/src/test/: setup.ts
scripts/: seed.py
src/kg_mcp/: __main__.py  config.py  server.py
src/kg_mcp/db/: connection.py  queries.py  schema.py
src/kg_mcp/models/: __init__.py  content.py  edge.py  event.py  node.py  pagination.py  session.py
src/kg_mcp/service/: graph_service.py  session_manager.py
src/kg_mcp/tools/: analysis.py  crud.py  scanner.py  search.py  system.py
tests/: conftest.py  test_graph_service.py  test_models.py  test_schema.py  test_session_manager.py  test_smoke.py  test_static_serving.py
